--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mainstyles.css">
-    <title>Document</title>
+    <title>Test</title>
 </head>
 <body>
     <P>Test paragraph1</P>
