--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mainstyles.css">
-    <title>Test</title>
+    <style src="./mainfuncs.js"></style>
+    <title>WPR281 Project</title>
 </head>
 <body>
-    <P>Test paragraph1</P>
+ <header>
+    <nav>
+     
+    </nav>
+ </header>
+
+ <footer>
+
+ </footer>
 </body>
 </html>
