Added folders for structure and relinked script and css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="mainstyles.css">
+    <link rel="stylesheet" href="/Main Files/mainstyles.css">
     <style src="./mainfuncs.js"></style>
     <title>WPR281 Project</title>
 </head>
@@ -18,5 +18,7 @@
  <footer>
 
  </footer>
+ <script href="/Main Files/mainfuncs.js"></script>
+ <script href="Index.js"></script>
 </body>
 </html>
