Fixed linking problem with css and script

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Main Files/mainstyles.css">
-    <style src="./mainfuncs.js"></style>
+    <link rel="stylesheet" href="Main Files/mainstyles.css">
+    <style src="Main Files/mainfuncs.js"></style>
     <title>WPR281 Project</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
  <footer>
 
  </footer>
- <script href="/Main Files/mainfuncs.js"></script>
+ <script href="Main Files/mainfuncs.js"></script>
  <script href="Index.js"></script>
 </body>
 </html>
