Added courses section in the html. Iin the js I added the code to import the json and then a display function which turns the json into html code

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     </nav>
  </header>
 
+ <div id="courses"></div>
+
  <footer>
 
  </footer>
- <script href="Main Files/mainfuncs.js"></script>
- <script href="Index.js"></script>
+ <script scr="Main Files/mainfuncs.js"></script>
+ <script src="Index.js"></script>
 </body>
 </html>
