--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#apply">Apply</a></li>
-            <li><a href="#courses">Courses</a></li>
+            <li><a href="Courses.html">Courses</a></li>
           </ul>
          
           <form role="search">
@@ -27,8 +27,7 @@
               type="search"
               placeholder="Search..."
               autofocus
-              required
-            />
+              required/>
             <button type="submit"><i class="fas fa-search"></i></button>
           </form>
         
