Edited navbar with correct colours. Fixed course card grids. Course card images usage

--- a/Courses.html
+++ b/Courses.html
@@ -16,7 +16,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#apply">Apply</a></li>
-            <li><a href="#courses">Courses</a></li>
+            <li><a href="#courses" id="redword">Courses</a></li>
           </ul>
          
           <form role="search">
