--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#apply">Apply</a></li>
-            <li><a href="Courses.html">Courses</a></li>
+            <li><a href="Courses.html" id="redword">Courses</a></li>
           </ul>
          
           <form role="search">
