Added functionality to track which courses read more button is clicked. Fixed a few css bugs.

--- a/Apply.html
+++ b/Apply.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="Main Files/mainstyles.css">
-    <title>WPR281 Project</title>
+    <title>Document</title>
 </head>
 <body>
     <header>
@@ -14,8 +13,8 @@
           <h1>StartSmart University</h1>
   
           <ul>
-            <li><a href="index.html" id="redword">Home</a></li>
-            <li><a href="Apply.html">Apply</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Apply.html" id="redword">Apply</a></li>
             <li><a href="Courses.html" >Courses</a></li>
           </ul>
          
@@ -25,16 +24,15 @@
               type="search"
               placeholder="Search..."
               autofocus
-              required/>
+              required
+            />
             <button type="submit"><i class="fas fa-search"></i></button>
           </form>
         
         </nav>
       </header>
-  
-      <footer></footer>
+
 
     <script src="Main Files/mainfuncs.js"></script>
-    <script src="Index.js"></script>
 </body>
 </html>
