--- a/Courses.html
+++ b/Courses.html
@@ -15,8 +15,8 @@
   
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#apply">Apply</a></li>
-            <li><a href="#courses" id="redword">Courses</a></li>
+            <li><a href="Apply.html">Apply</a></li>
+            <li><a href="Courses.html" id="redword">Courses</a></li>
           </ul>
          
           <form role="search">
@@ -33,7 +33,7 @@
         </nav>
       </header>
 
-        <h1>Courses</h1>
+        <h1 id="courhead">Courses</h1>
         <div id="courses">
 
         </div>
