added section to index, changed Masters pic, changed font family, tested section divider, changed header color, added index.css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="Main Files/mainstyles.css">
+    <link rel="stylesheet" href="index.css">
     <title>WPR281 Project</title>
 </head>
 <body>
@@ -32,6 +33,13 @@
         </nav>
       </header>
   
+      <section id="index-title-section">
+        <h2>Start your Journey Today...</h2>
+        <button id="title-p">The <i>smart</i> Way</button>
+      </section>
+      <section id="index-learn-section">
+        <img class="section-divider" src="Images/section_divider.png" alt="simple section divider">
+      </section>
       <footer></footer>
 
     <script src="Main Files/mainfuncs.js"></script>
