Footer v1 (Semi-responsive)

--- a/index.html
+++ b/index.html
@@ -1,49 +1,61 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="Main Files/mainstyles.css">
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link rel="stylesheet" href="Main Files/mainstyles.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>WPR281 Project</title>
-</head>
-<body>
+  </head>
+  <body>
     <!--Testing - TML-->
     <header>
-        <nav>
-          <h1>StartSmart University</h1>
-  
-          <ul>
-            <li><a href="index.html" id="redword">Home</a></li>
-            <li><a href="Apply.html">Apply</a></li>
-            <li><a href="Courses.html" >Courses</a></li>
-          </ul>
-         
-          <form role="search">
-            <input
-              id="search"
-              type="search"
-              placeholder="Search..."
-              autofocus
-              required/>
-            <button type="submit"><i class="fas fa-search"></i></button>
-          </form>
-        
-        </nav>
-      </header>
-  
-      <section id="index-title-section">
-        <h2>Start your Journey Today...</h2>
-        <button id="title-p">The <i>smart</i> Way</button>
-      </section>
-      <section id="index-learn-section">
-        <img class="section-divider" src="Images/section_divider.png" alt="simple section divider">
-      </section>
-      <footer></footer>
+      <nav>
+        <h1>StartSmart University</h1>
+
+        <ul>
+          <li><a href="index.html" id="redword">Home</a></li>
+          <li><a href="Apply.html">Apply</a></li>
+          <li><a href="Courses.html">Courses</a></li>
+        </ul>
+
+        <form role="search">
+          <input
+            id="search"
+            type="search"
+            placeholder="Search..."
+            autofocus
+            required
+          />
+          <button type="submit"><i class="fas fa-search"></i></button>
+        </form>
+      </nav>
+    </header>
+
+    <section id="index-title-section">
+      <h2>Start your Journey Today...</h2>
+      <button id="title-p">The <i>smart</i> Way</button>
+    </section>
+    <section id="index-learn-section">
+      <img
+        class="section-divider"
+        src="Images/section_divider.png"
+        alt="simple section divider"
+      />
+    </section>
+
+    <footer>
+      <div class="footer_item1"><h1>StartSmart University</h1></div>
+      <div class="footer_item footer_item2">123-456-7890<br>info@mysite.com</div>
+      <div class="footer_item footer_item3">500 Terry Francine Street,<br>6th Floor, San Francisco,<br> CA 94158</div>
+      <div class="footer_item footer_item4"></div>
+    </footer>
 
     <script src="Main Files/mainfuncs.js"></script>
     <script src="Index.js"></script>
-</body>
+  </body>
 </html>
