needed to sync. changed font size of titles and added one h2 element

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <button id="title-p">The <i>smart</i> Way</button>
       </section>
       <section id="index-learn-section">
+        <h2>Learning Re-Imagined</h2>
         <img class="section-divider" src="Images/section_divider.png" alt="simple section divider">
       </section>
       <footer></footer>
