Refactor: Simplified CSS header properties

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
     <title>WPR281 Project</title>
   </head>
   <body>
-    <!--Testing - TML-->
+  
     <header>
+      <h1>StartSmart University</h1>
       <nav>
-        <h1>StartSmart University</h1>
-
         <ul>
           <li><a href="index.html" id="redword">Home</a></li>
           <li><a href="Apply.html">Apply</a></li>
@@ -50,8 +49,13 @@
 
     <footer>
       <div class="footer_item1"><h1>StartSmart University</h1></div>
-      <div class="footer_item footer_item2">123-456-7890<br>info@mysite.com</div>
-      <div class="footer_item footer_item3">500 Terry Francine Street,<br>6th Floor, San Francisco,<br> CA 94158</div>
+      <div class="footer_item footer_item2">
+        123-456-7890<br />info@mysite.com
+      </div>
+      <div class="footer_item footer_item3">
+        500 Terry Francine Street,<br />6th Floor, San Francisco,<br />
+        CA 94158
+      </div>
       <div class="footer_item footer_item4"></div>
     </footer>
 
