--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
     <title>WPR281 Project</title>
   </head>
   <body>
-  
     <header>
-      <h1>StartSmart University</h1>
+      <div class="navbar">
+        <h1>StartSmart University</h1>
+        <button class="hamburger-btn">&#9776;</button>
+      </div>
+
       <nav>
         <ul>
           <li><a href="index.html" id="redword">Home</a></li>
