Fixed hambuer menu event listener bug. And a few other bugs

--- a/Apply.html
+++ b/Apply.html
@@ -9,9 +9,12 @@
 </head>
 <body>
     <header>
-        <nav>
+         <div class="navbar">
           <h1>StartSmart University</h1>
+          <button class="hamburger-btn">&#9776;</button>
+        </div>
   
+        <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="Apply.html" id="redword">Apply</a></li>
