--- a/Courses.html
+++ b/Courses.html
@@ -10,9 +10,12 @@
 </head>
 <body>
     <header>
+        <div class="navbar">
+            <h1>StartSmart University</h1>
+            <button class="hamburger-btn">&#9776;</button>
+        </div>
+        
         <nav>
-          <h1>StartSmart University</h1>
-  
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="Apply.html">Apply</a></li>
