Fiexed the red word in the nav bar indicating which page the user is on

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <nav>
         <ul>
-          <li><a href="index.html" id="firstWord">Home</a></li>
+          <li><a href="index.html" id="redword">Home</a></li>
           <li><a href="Apply.html">Apply</a></li>
           <li><a href="Courses.html">Courses</a></li>
         </ul>
