--- a/Courses.html
+++ b/Courses.html
@@ -15,7 +15,7 @@
   
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="Apply.html">Apply</a></li>
+            <li><a href="Enroll.html">Enroll</a></li>
             <li><a href="Courses.html" id="redword">Courses</a></li>
           </ul>
          
