added the study guide downloads

--- a/Courses.html
+++ b/Courses.html
@@ -72,7 +72,7 @@
               </div>
               <div class="paragraphs">
                   <p>The Higher Certificate in IT provides a comprehensive introduction to the field of information technology. This one-year program is designed to equip students with essential IT skills, making them proficient in software development, networking, and database management. Ideal for those seeking entry-level positions or wishing to further their studies, this course lays a solid foundation in both theoretical knowledge and practical application.</p>
-              <div class="LecNdVen">
+                  <div class="LecNdVen">
                   <h4>Lecturers:</h4>
                   <div class="SubOptInfo">
                   <ul>
@@ -88,6 +88,7 @@
                       <li>Computer Lab 2, IT Wing</li> 
                       </ul>
               </div>
+              <a href="Images/WPR 281 Study Guide [2024] v1.4.pdf" download>Download study guide here</a>
               </div>
           </div>
           <div class="CourseDrop">
@@ -217,6 +218,7 @@
                           <li>Multimedia Lab, Creative Arts Building</li> 
                           </ul>
                   </div>
+                  <a href="Images/WPR 281 Study Guide [2024] v1.4.pdf" download>Download study guide here</a>
               </div>
           </div>
           <div class="CourseDrop">
@@ -350,6 +352,7 @@
                                       <li>Research Lab, Science Building</li> 
                                       </ul>
                               </div>
+                              <a href="Images/WPR 281 Study Guide [2024] v1.4.pdf" download>Download study guide here</a>
                           </div>
                       </div>
                       <div class="CourseDrop">
@@ -479,6 +482,7 @@
                                               <li>Computer Lab 2, IT Wing</li> 
                                               </ul>
                                       </div>
+                                      <a href="Images/WPR 281 Study Guide [2024] v1.4.pdf" download>Download study guide here</a>
                                   </div>
                               </div>
                               <div class="CourseDrop">
