--- a/index.html
+++ b/index.html
@@ -40,8 +40,23 @@
 
     <section id="index-title-section">
       <h2>Start your Journey Today...</h2>
-      <button id="title-p">The <i>Smart</i> Way</button>
+      <p id="title-p">The <i>Smart</i> Way</p>
     </section>
+
+    <section id="index-howitworks-section">
+      <h2 class="grid-item grid-item1">Learning Re-imagined</h2>
+      <img class="grid-item grid-item2" src="./Images/home_section_1.png" />
+      <div class="grid-item grid-item3">
+        <h3>Education beyond books</h3>
+        <p>
+          Embark on a journey of flexible learning with our institution. We
+          cater to individuals seeking high-value education with the convenience
+          of learning how you need to. At StartSmart University, progressing at
+          your own pace is key to success.
+        </p>
+      </div>
+    </section>
+
     <section id="index-learn-section">
       <img
         class="section-divider"
