Half Working back button and added card heading

--- a/Courses.html
+++ b/Courses.html
@@ -42,6 +42,8 @@
       <h2>Courses</h2>
     </section>
 
+    <button id="back" class="invisible">Back</button>
+
     <main id="courses">
       <section id="courseDetail" class="invisible">
         
