Completed back button

--- a/Courses.html
+++ b/Courses.html
@@ -45,7 +45,7 @@
     <button id="back" class="invisible">Back</button>
 
     <main id="courses">
-      <section id="courseDetail" class="invisible">
+      <section id="Detail" class="invisible">
         
       
     </section>
