Fixed button bug on enrollment page

--- a/Enroll.html
+++ b/Enroll.html
@@ -76,7 +76,7 @@
                 <textarea id="message" name="message" rows="4"></textarea>
             </div>
             <div class="form-group-button">
-                <button type="submit">Submit</button>
+                <button type="submit" id="submit">Submit</button>
             </div>
         </form>
     </div>
