--- a/Enroll.html
+++ b/Enroll.html
@@ -19,7 +19,7 @@
        <nav>
          <ul>
            <li><a href="index.html">Home</a></li>
-           <li><a href="Apply.html" id="redword">Apply</a></li>
+           <li><a href="Apply.html" id="redword">Enroll</a></li>
            <li><a href="Courses.html" >Courses</a></li>
          </ul>
         
