Courses Page resonsiveness

--- a/Courses.html
+++ b/Courses.html
@@ -207,6 +207,18 @@
       </div>
     </main>
 
+    <footer>
+      <div class="footer_item1"><h1>StartSmart University</h1></div>
+      <div class="footer_item footer_item2">
+        123-456-7890<br />info@mysite.com
+      </div>
+      <div class="footer_item footer_item3">
+        500 Terry Francine Street,<br />6th Floor, San Francisco,<br />
+        CA 94158
+      </div>
+      <div class="footer_item footer_item4"></div>
+    </footer>
+
     <script src="Main Files/mainfuncs.js"></script>
     <script src="Main Files/courses.js"></script>
   </body>
