added a bit of css to form, fixed section divider

--- a/Enroll.html
+++ b/Enroll.html
@@ -86,6 +86,13 @@
     </div>
 
     <div id="summarySection" style="display: none;">
+        <section id="index-learn-section">
+            <img
+              class="section-divider"
+              src="Images/section_divider.png"
+              alt="simple section divider"
+            />
+          </section>
         <h2>Summary of Your Enrollment</h2>
         <p>Thank you for applying at <i>StartSmart University</i>!!! <br>We will contact you within two business days with more information and instructions.</p>
         <table id="summaryTable">
@@ -103,6 +110,18 @@
 
     <div id="countdown"></div>
 
+
+    <footer>
+        <div class="footer_item1"><h1>StartSmart University</h1></div>
+        <div class="footer_item footer_item2">
+          123-456-7890<br />info@mysite.com
+        </div>
+        <div class="footer_item footer_item3">
+          500 Terry Francine Street,<br />6th Floor, San Francisco,<br />
+          CA 94158
+        </div>
+        <div class="footer_item footer_item4"></div>
+      </footer>
     <script src="Main Files/mainfuncs.js"></script>
 </body>
 </html>
