edited home page and some other stuff

--- a/Enroll.html
+++ b/Enroll.html
@@ -20,7 +20,7 @@
          <ul>
            <li><a href="index.html">Home</a></li>
            <li><a href="Courses.html" >Courses</a></li>
-           <li><a href="Apply.html" id="redword">Enroll</a></li>
+           <li><a href="Enroll.html" id="redword">Enroll</a></li>
          </ul>
         
          <form role="search">
