made enroll look nicer

--- a/Enroll.html
+++ b/Enroll.html
@@ -37,11 +37,14 @@
        </nav>
      </header>
 
+     <section id="enroll-title-section">
+      <h2>Enrollment Form</h2>
+    </section>
+<div class="para-container">
+  <p>Please apply here with your full name and email address. Also include a short paragraph serving as motivation for why you want to study at StartSmart University.
+</p>
+</div>
      <div class="form-container">
-        <h2>Enrollment Form</h2>
-        <p>Please apply here with your full name and email address. Also include a short paragraph serving as motivation for why you want to study at StartSmart University.
-        </p>
-        <br>
         <form id="enrollmentForm">
             <div class="form-group">
                 <label for="name">Name</label>
