--- a/Enroll.html
+++ b/Enroll.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="Main Files/mainstyles.css">
     <link rel="stylesheet" href="Enroll.css">
-    <script src="Enroll.js" defer></script>
+    
     <title>Document</title>
 </head>
 <body>
@@ -126,5 +126,6 @@
         <div class="footer_item footer_item4"></div>
       </footer>
     <script src="Main Files/mainfuncs.js"></script>
+    <script src="Enroll.js"></script>
 </body>
 </html>
