changed footer (sorry you had to make the other one Tiago ;-; )

--- a/Courses.html
+++ b/Courses.html
@@ -49,16 +49,15 @@
     </main>
 
     <footer>
-      <div class="footer_item1"><h1>StartSmart University</h1></div>
-      <div class="footer_item footer_item2">
-        123-456-7890<br />info@mysite.com
-      </div>
-      <div class="footer_item footer_item3">
-        500 Terry Francine Street,<br />6th Floor, San Francisco,<br />
-        CA 94158
-      </div>
-      <div class="footer_item footer_item4"></div>
-    </footer>
+      <ul class="menu">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="Courses.html">Courses</a></li>
+              <li><a href="Enroll.html">Enroll</a></li>
+      </ul>
+          <div class="footer-copyright">
+              <p>Copyright @ 2024 | StartSmart University</p>
+          </div>
+  </footer>
 
     <script src="Main Files/mainfuncs.js"></script>
     <script src="Main Files/courses.js"></script>
