--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
             type="search"
             placeholder="Search..."
             autofocus
+            autocomplete="off"
+            list="courseList_index" 
             required
           />
           <button type="submit"><i class="fas fa-search"></i></button>
         </form>
+        <datalist id="courseList_index"></datalist>
+
       </nav>
     </header>
 
