Semi-working Searchbar

--- a/Courses.html
+++ b/Courses.html
@@ -32,13 +32,17 @@
             placeholder="Search..."
             autofocus
             autocomplete="off"
-            list="courseList_courses" 
+            list="courseList_courses"
             required
           />
           <button type="submit"><i class="fas fa-search"></i></button>
         </form>
-        <datalist id="courseList_courses"></datalist>
-
+        <datalist id="courseList_courses">
+          <option value="Higher Certificate in IT"></option>
+          <option value="Diploma in Game Development"></option>
+          <option value="BSc in Computer Science"></option>
+          <option value="Masters in Computer Science"></option>
+        </datalist>
       </nav>
     </header>
 
@@ -52,16 +56,16 @@
       <section id="Detail" class="invisible"></section>
     </main>
 
-        <footer>
+    <footer>
       <ul class="menu">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="Courses.html">Courses</a></li>
-              <li><a href="Enroll.html">Enroll</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Courses.html">Courses</a></li>
+        <li><a href="Enroll.html">Enroll</a></li>
       </ul>
-          <div class="footer-copyright">
-              <p>Copyright @ 2024 | StartSmart University</p>
-          </div>
-  </footer>
+      <div class="footer-copyright">
+        <p>Copyright @ 2024 | StartSmart University</p>
+      </div>
+    </footer>
 
     <script src="Main Files/mainfuncs.js"></script>
     <script src="Main Files/courses.js"></script>
