--- a/index.html
+++ b/index.html
@@ -32,13 +32,17 @@
             placeholder="Search..."
             autofocus
             autocomplete="off"
-            list="courseList_index" 
+            list="courseList_index"
             required
           />
           <button type="submit"><i class="fas fa-search"></i></button>
         </form>
-        <datalist id="courseList_index"></datalist>
-
+        <datalist id="courseList_index">
+          <option value="Higher Certificate in IT"></option>
+          <option value="Diploma in Game Development"></option>
+          <option value="BSc in Computer Science"></option>
+          <option value="Masters in Computer Science"></option>
+        </datalist>
       </nav>
     </header>
 
@@ -53,14 +57,17 @@
       <div class="grid-item grid-item3">
         <h3>Education beyond books</h3>
         <p>
-          Embark on a journey of flexible learning with our institution, where we prioritize your
-          educational needs and lifestyle. At StartSmart University, we understand that every 
-          learner is unique, which is why we offer high-value education tailored to your individual
-          circumstances. Our innovative approach allows you to progress at your own pace, ensuring
-          that you can balance your studies with other commitments. Whether you're pursuing a new career path or 
-          advancing in your current field, our programs are designed to provide you with the skills
-          and knowledge you need to succeed, all with the convenience and flexibility that modern learners demand. 
-          Join us at StartSmart University and experience an education that adapts to you.
+          Embark on a journey of flexible learning with our institution, where
+          we prioritize your educational needs and lifestyle. At StartSmart
+          University, we understand that every learner is unique, which is why
+          we offer high-value education tailored to your individual
+          circumstances. Our innovative approach allows you to progress at your
+          own pace, ensuring that you can balance your studies with other
+          commitments. Whether you're pursuing a new career path or advancing in
+          your current field, our programs are designed to provide you with the
+          skills and knowledge you need to succeed, all with the convenience and
+          flexibility that modern learners demand. Join us at StartSmart
+          University and experience an education that adapts to you.
         </p>
       </div>
     </section>
@@ -108,12 +115,13 @@
         <img src="./Images/monitor.png" />
         <h4>Masters in Computer Science</h4>
         <p>
-          Further your knowledge of Software Engineering, Computers, and closely related topics.
+          Further your knowledge of Software Engineering, Computers, and closely
+          related topics.
         </p>
       </div>
     </section>
     <div id="learnMoreBtn">
-      <a href="Courses.html"><button >Learn More</button></a>
+      <a href="Courses.html"><button>Learn More</button></a>
     </div>
     <section id="index-learn-section">
       <img
@@ -173,14 +181,14 @@
 
     <footer>
       <ul class="menu">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="Courses.html">Courses</a></li>
-              <li><a href="Enroll.html">Enroll</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Courses.html">Courses</a></li>
+        <li><a href="Enroll.html">Enroll</a></li>
       </ul>
-          <div class="footer-copyright">
-              <p>Copyright @ 2024 | StartSmart University</p>
-          </div>
-  </footer>
+      <div class="footer-copyright">
+        <p>Copyright @ 2024 | StartSmart University</p>
+      </div>
+    </footer>
 
     <script src="Main Files/mainfuncs.js"></script>
     <script src="Index.js"></script>
