Final bug fixes deployed? (Hopefully :-:)
Co-authored-by: TylerG14 <TylerG14@users.noreply.github.com>
Co-authored-by: reghardduplessis <reghardduplessis@users.noreply.github.com>
Co-authored-by: Zander Lindeque <600167@student.belgiumcampus.ac.za>

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <h2 class="grid-item grid-item1">Learning Re-imagined</h2>
       <img class="grid-item grid-item2" src="./Images/home_section_1.png" />
       <div class="grid-item grid-item3">
-        <h3>Education beyond books</h3>
+        <h3>Education Beyond Books</h3>
         <p>
           Embark on a journey of flexible learning with our institution, where
           we prioritize your educational needs and lifestyle. At StartSmart
