--- a/Courses/Courses.html
+++ b/Courses/Courses.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Courses</title>
-    <link rel="stylesheet" href="Courses.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <link rel="stylesheet" href="Main Files/mainstyles.css" />
+    <link rel="stylesheet" href="Courses.css" />
+    <link rel="stylesheet" href="../Main_Files/mainstyles.css" />
   </head>
   <body>
     <header>
@@ -20,9 +20,9 @@
 
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="Courses.html" id="redword">Courses</a></li>
-          <li><a href="Enroll.html">Enroll</a></li>
+          <li><a href="../Index/index.html">Home</a></li>
+          <li><a href="../Courses/Courses.html">Courses</a></li>
+          <li><a href="../Enroll/Enroll.html" id="redword">Enroll</a></li>
         </ul>
 
         <form role="search">
@@ -56,13 +56,13 @@
       <section id="Detail" class="invisible"></section>
     </main>
 
-        <footer>
-          <div class="footer-copyright">
-              <p>Copyright @ 2024 | StartSmart University</p>
-          </div>
-  </footer>
+    <footer>
+      <div class="footer-copyright">
+        <p>Copyright @ 2024 | StartSmart University</p>
+      </div>
+    </footer>
 
-    <script src="Main Files/mainfuncs.js"></script>
-    <script src="Main Files/courses.js"></script>
+    <script src="../Main_Files/mainfuncs.js"></script>
+    <script src="./courses.js"></script>
   </body>
 </html>
