--- a/Index/index.html
+++ b/Index/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <link rel="stylesheet" href="Main Files/mainstyles.css" />
+    <link rel="stylesheet" href="../Main_Files/mainstyles.css" />
     <link rel="stylesheet" href="index.css" />
     <title>WPR281 Project</title>
   </head>
@@ -20,9 +20,9 @@
 
       <nav>
         <ul>
-          <li><a href="index.html" id="redword">Home</a></li>
-          <li><a href="Courses.html">Courses</a></li>
-          <li><a href="Enroll.html">Enroll</a></li>
+          <li><a href="../Index/index.html">Home</a></li>
+          <li><a href="../Courses/Courses.html">Courses</a></li>
+          <li><a href="../Enroll/Enroll.html" id="redword">Enroll</a></li>
         </ul>
 
         <form role="search">
@@ -53,7 +53,7 @@
 
     <section id="index-howitworks-section">
       <h2 class="grid-item grid-item1">Learning Re-imagined</h2>
-      <img class="grid-item grid-item2" src="./Images/home_section_1.png" />
+      <img class="grid-item grid-item2" src="../Images/home_section_1.png" />
       <div class="grid-item grid-item3">
         <h3>Education Beyond Books</h3>
         <p>
@@ -75,7 +75,7 @@
     <section id="index-learn-section">
       <img
         class="section-divider"
-        src="Images/section_divider.png"
+        src="../Images/section_divider.png"
         alt="simple section divider"
       />
     </section>
@@ -90,7 +90,7 @@
       </div>
 
       <div class="grid-item grid-item2">
-        <img src="./Images/hand.png" />
+        <img src="../Images/hand.png" />
         <h4>Higher Certificate in I.T</h4>
         <p>
           Get started with the basics of everything you need to know to thrive
@@ -98,21 +98,21 @@
         </p>
       </div>
       <div class="grid-item grid-item3">
-        <img src="./Images/controller.png" />
+        <img src="../Images/controller.png" />
         <h4>Diploma in Game Design</h4>
         <p>
           Learn the ins and outs of turning an idea into a full-fledged game.
         </p>
       </div>
       <div class="grid-item grid-item4">
-        <img src="./Images/code.png" />
+        <img src="../Images/code.png" />
         <h4>BSc Computer Science</h4>
         <p>
           Dive deep into the complexities of computers and Software Engineering.
         </p>
       </div>
       <div class="grid-item grid-item5">
-        <img src="./Images/monitor.png" />
+        <img src="../Images/monitor.png" />
         <h4>Masters in Computer Science</h4>
         <p>
           Further your knowledge of Software Engineering, Computers, and closely
@@ -126,7 +126,7 @@
     <section id="index-learn-section">
       <img
         class="section-divider"
-        src="Images/section_divider.png"
+        src="../Images/section_divider.png"
         alt="simple section divider"
       />
     </section>
@@ -177,7 +177,7 @@
           </div>
   </footer>
 
-    <script src="Main Files/mainfuncs.js"></script>
+    <script src="../Main_Files/mainfuncs.js"></script>
     <script src="Index.js"></script>
   </body>
 </html>
