--- a/Enroll/Enroll.html
+++ b/Enroll/Enroll.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <link rel="stylesheet" href="Main Files/mainstyles.css" />
+    <link rel="stylesheet" href="../Main_Files/mainstyles.css" />
     <link rel="stylesheet" href="Enroll.css" />
 
     <title>Document</title>
@@ -21,9 +21,9 @@
 
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="Courses.html">Courses</a></li>
-          <li><a href="Enroll.html" id="redword">Enroll</a></li>
+          <li><a href="../Index/index.html">Home</a></li>
+          <li><a href="../Courses/Courses.html">Courses</a></li>
+          <li><a href="../Enroll/Enroll.html" id="redword">Enroll</a></li>
         </ul>
 
         <form role="search">
@@ -130,7 +130,7 @@
               <p>Copyright @ 2024 | StartSmart University</p>
           </div>
   </footer>
-    <script src="Main Files/mainfuncs.js"></script>
+    <script src="../Main_Files/mainfuncs.js"></script>
     <script src="Enroll.js"></script>
   </body>
 </html>
