--- a/Courses/Courses.html
+++ b/Courses/Courses.html
@@ -21,8 +21,8 @@
       <nav>
         <ul>
           <li><a href="../Index/index.html">Home</a></li>
-          <li><a href="../Courses/Courses.html">Courses</a></li>
-          <li><a href="../Enroll/Enroll.html" id="redword">Enroll</a></li>
+          <li><a href="../Courses/Courses.html" id="redword">Courses</a></li>
+          <li><a href="../Enroll/Enroll.html" >Enroll</a></li>
         </ul>
 
         <form role="search">
