Fixed link and json

--- a/Courses/Courses.html
+++ b/Courses/Courses.html
@@ -20,7 +20,7 @@
 
       <nav>
         <ul>
-          <li><a href="../Index/index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="../Courses/Courses.html" id="redword">Courses</a></li>
           <li><a href="../Enroll/Enroll.html" >Enroll</a></li>
         </ul>
