--- a/Enroll/Enroll.html
+++ b/Enroll/Enroll.html
@@ -21,7 +21,7 @@
 
       <nav>
         <ul>
-          <li><a href="../Index/index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="../Courses/Courses.html">Courses</a></li>
           <li><a href="../Enroll/Enroll.html" id="redword">Enroll</a></li>
         </ul>
